--- a/views/find.html
+++ b/views/find.html
@@ -1,5 +1,51 @@
 {{include './header.html'}}
-    <h1>这里是发现</h1>
+<link rel="stylesheet" href="/css/findCss/findLess.css">
+
+<main>
+    <div>
+        <img src="/imges/发现/pic1-1.png" alt="">
+        <div>
+            <h1>社区</h1>
+            <p>共有80W+人参与晒花</p>
+            <ul>
+                <li><img src="/imges/发现/pic2-1.jfif" alt=""></li>
+                <li><img src="/imges/发现/pic2-2.jfif" alt=""></li>
+                <li><img src="/imges/发现/pic2-3.jfif" alt=""></li>
+                <li><img src="/imges/发现/pic2-4.png" alt=""></li>
+            </ul>
+            <div>立即查看</div>
+        </div>
+    </div>
+    <div>
+        <img src="/imges/发现/pic1-2.png" alt="">
+        <div>
+            <h1>鲜花养护</h1>
+            <p>鲜花之美需精心呵护</p>
+            <ul></ul>
+            <div>立即查看</div>
+        </div>
+    </div>
+</main>
+    <script>
+        $('footer>div:nth-of-type(1)>i').css({
+            background:'url(/imges/首页-推荐/nav-1b.png)',
+            backgroundSize: '100%'
+        })
+        $('footer>div:nth-of-type(2)>i').css({
+            background:'url(/imges/首页-推荐/nav-2b.png)',
+            backgroundSize: '100%'
+        })
+        $('main>div:nth-of-type(1)').click(function(){
+            var username= $.cookie('username')
+            if(username==undefined){
+                location.href='/mine';
+            }else{
+                location.href='/community'
+            }
+        })
+
+
+    </script>
 
 </body>
 
