--- a/views/header.html
+++ b/views/header.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/bootstrap-3.3.7-dist/css/bootstrap.css">
     <script src="/bootstrap-3.3.7-dist/js/jquery-3.1.1.js"></script>
     <script src="/bootstrap-3.3.7-dist/js/bootstrap.js"></script>
+    <script src="/bootstrap-3.3.7-dist/js/jquery.cookie.js"></script>
     <style>
         * {
             margin: 0;
