--- a/views/moreF.html
+++ b/views/moreF.html
@@ -1,6 +1,40 @@
 {{include './header.html'}}
-    <h1>这里是F+制物所</h1>
+<link rel="stylesheet" href="/css/indexCss/moreF.css">
+    <div class="top"><img src="./imges/首页-制物/topbanner.jpg" alt=""></div>
 
+    <div class="show_box">
+        {{each data index}}
+        {{each index item }}
+        <div class="list">
+            <div class="list_img">
+                <img src="{{item.img}}" alt="">
+                <p class="tips">{{item.top}}</p>
+            </div>
+            <div class="title">
+                <p>{{item.title}}</p>
+                <p><span>{{item.newPrice}}</span>
+                    <del class="old">{{item.oldPrice}}</del>
+                </p>
+            </div>
+        </div>
+        {{/each}}
+        {{/each}}
+    </div>
+    <div class="ad"><img src="./imges/首页-制物/hot.png" alt=""></div>
+    <div class="hot">
+        <img src="./imges/首页-制物/hot1.png" alt="">
+        <img src="./imges/首页-制物/hot2.png" alt="">
+        <img src="./imges/首页-制物/hot3.png" alt="">
+        <img src="./imges/首页-制物/hot4.png" alt="">
+        <img src="./imges/首页-制物/hot5.png" alt="">
+    </div>
+    <div class="footer">
+        <p>©2013-2020 上海分尚网络科技有限公司</p>
+        <p>
+            <span>沪ICP备13016979</span>
+            <span><img src="./imges/首页-制物/ic.png" alt=""> 沪公网安备 31011402005615号</span>
+        </p>
+    </div>
 </body>
 
 </html>
