--- a/views/home.html
+++ b/views/home.html
@@ -1,6 +1,170 @@
 {{include './header.html'}}
-    <h1>这里是家居生活</h1>
+<link rel="stylesheet" href="/css/indexCss/home.css">
+<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+<script src="https://unpkg.com/swiper/swiper-bundle.min.js"> </script>
+<div class="swiper-container-big swiper-container-initialized swiper-container-horizontal">
+    <ul id="swiper-wrapper-5166ce487d6f5cbe" class="swiper-wrapper" aria-live="polite">
+        <li class="swiper-slide" role="group" aria-label="1 / 4">
+            <img src="./imges/首页-家居/banner1.jpg" alt="">
+        </li>
+        <li class="swiper-slide" role="group" aria-label="2 / 4">
+            <img src="./imges/首页-家居/banner2.jpg" alt="">
+        </li>
+        <li class="swiper-slide" role="group" aria-label="3 / 4">
+            <img src="./imges/首页-家居/banner3.jpg" alt="">
+        </li>
+        <li class="swiper-slide" role="group" aria-label="4 / 4">
+            <img src="./imges/首页-家居/banner4.jpg" alt="">
+        </li>
+    </ul>
+    <div class="swiper-pagination swiper-pagination-bullets">
+        <span class="swiper-pagination-bullet .swiper-pagination-bullet-active"></span>
+        <span class="swiper-pagination-bullet"></span>
+        <span class="swiper-pagination-bullet"></span>
+        <span class="swiper-pagination-bullet"></span>
+    </div>
+</div>
 
+<div class="box ad">
+    <div class="ad-left">
+        <img src="./imges/首页-家居/ad1.png" alt="">
+    </div>
+    <div class="ad-right">
+        <img src="./imges/首页-家居/ad2.png" alt="">
+    </div>
+</div>
+
+<!-- 新品推荐 -->
+<div class="box new">
+    <h1>新品推荐</h1>
+    <div class="swiper-container swiper-container-initialized swiper-container-horizontal">
+        <ul id="swiper-wrapper-5166ce487d6f5cbe" class="swiper-wrapper" aria-live="polite">
+            {{each data.new item index}}
+            <li class="swiper-slide" role="group" aria-label="({{index}}+1) /3" >
+                {{each item news}}
+                <div class="lb-box">
+                    <div class="img">
+                        <img src="{{news.img}}" alt="">
+                        <div>NEW</div>
+                    </div>
+                    <div class="title">
+                        <p>{{news.title}}</p>
+                    <p><span>￥{{news.newPrice}}</span><del class="old">￥{{ news.oldPrice}}</del></p>
+                    </div>
+                    
+                </div>
+
+                {{/each}}
+            </li>
+
+            {{/each}}
+        </ul>
+        <div class="swiper-pagination swiper-pagination-bullets">
+            <span class="swiper-pagination-bullet .swiper-pagination-bullet-active"></span>
+            <span class="swiper-pagination-bullet"></span>
+            <span class="swiper-pagination-bullet"></span>
+        </div>
+
+    </div>
+
+</div>
+
+<div class="show_box">
+    <h1>热卖专区</h1>
+    {{each data.list item}}
+    <div class="list">
+        <div class="list_img">
+            <img src="{{item.img}}" alt="">
+            <p class="tips">{{item.top}}</p>
+        </div>
+        <div class="title">
+            <p>{{item.title}}</p>
+            <p><span>￥{{item.newPrice}}</span>
+                <del class="old">￥{{item.oldPrice}}</del>
+                <span class=" num">月售{{item.num}}</span>
+            </p>
+        </div>
+    </div>
+    {{/each}}
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<script>
+    var mySwiper = new Swiper('.swiper-container-big', {
+
+        // 轮播图的方向，也可以是vertical方向
+
+        direction: 'horizontal',
+
+        //播放速度
+
+        loop: true,
+
+        // 自动播放时间
+
+        autoplay: true,
+
+        // 播放的速度
+
+        speed: 300,
+
+        // 如果需要分页器，即下面的小圆点
+
+        pagination: {
+            el: '.swiper-pagination',
+        },
+        // 这样，即使我们滑动之后， 定时器也不会被清除
+        autoplayDisableOnInteraction: false,
+
+    });
+    var mySwiper = new Swiper('.swiper-container', {
+
+        // 轮播图的方向，也可以是vertical方向
+
+        direction: 'horizontal',
+
+        //播放速度
+
+        loop: true,
+
+        // 自动播放时间
+
+        autoplay: false,
+
+        // 播放的速度
+
+        speed: 300,
+
+        // 如果需要分页器，即下面的小圆点
+
+        pagination: {
+            el: '.swiper-pagination',
+        },
+        // 这样，即使我们滑动之后， 定时器也不会被清除
+        autoplayDisableOnInteraction: false,
+
+    });
+</script>
 </body>
 
 </html>
