--- a/views/community.html
+++ b/views/community.html
@@ -1,11 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+{{include './community-common.html'}}
+
 <body>
-    <h1>这里是社区</h1>
+
 </body>
+
 </html>
