--- a/views/community.html
+++ b/views/community.html
@@ -1,7 +1,20 @@
 {{include './community-common.html'}}
+<link rel="stylesheet" href="/css/communityCSS/community.css">
 
 <body>
+    <header>
+        <div class="container">
+            <div class="search">
+                <section class="inest">
+                    <span class="glyphicon glyphicon-search"></span>
+                    <input type="text" name="intest" id="" placeholder="在23W帖子中发现你的兴趣">
+                </section>
+                <button>搜索</button>
+            </div>
 
+        </div>
+
+    </header>
 </body>
 
 </html>
