--- a/views/find.html
+++ b/views/find.html
@@ -43,7 +43,14 @@
                 location.href='/community'
             }
         })
-
+        $('main>div:nth-of-type(2)').click(function(){
+            var username= $.cookie('username')
+            if(username==undefined){
+                location.href='/mine';
+            }else{
+                location.href='/maintenance'
+            }
+        })
 
     </script>
 
