完成了登录注册和用户界面

--- a/views/header.html
+++ b/views/header.html
@@ -31,15 +31,21 @@
         
         header>div {
             width: 117.1vw;
+            height: 100%;
+            box-sizing: border-box;
         }
         
         header ul {
             display: flex;
             padding: 0;
+            margin: 0;
+            height: 100%;
+            box-sizing: border-box;
         }
         
         header li {
             list-style: none;
+            box-sizing: border-box;
             padding: 0 10px;
             line-height: 6vh;
             color: #333333;
