--- a/views/community-common.html
+++ b/views/community-common.html
@@ -47,7 +47,7 @@
             align-items: center;
             border-radius: 8vw;
             position: relative;
-            bottom: 27%;
+            bottom: 1.5vh;
             border: 1vw solid white;
             box-sizing: border-box;
         }
