--- a/views/community.html
+++ b/views/community.html
@@ -25,17 +25,27 @@
 
             <!-- 导航栏 -->
             <div class="nav-bar">
-                <a href="javascript:viod(0)">关注</a>
-                <a href="javascript:viod(0)">推荐</a>
-                <a href="javascript:viod(0)" class="nav-active">最新</a>
+                <a href="javascript:void(0)">关注</a>
+                <a href="javascript:void(0)">推荐</a>
+                <a href="javascript:void(0)" class="nav-active">最新</a>
             </div>
         </div>
     </header>
 
     <main>
-        <div class="news"></div>
-        <div class="recommend"></div>
-        <div class="attention"></div>
+        <div class="container">
+            <div class="news">
+                {{each data.news item}}
+                <div class="cet"><img src="{{item.img}}" alt="">
+                    <p>{{item.msg}}</p>
+                    <p><img src="{{item.userPic}}" alt="">{{item.name}}</p>
+                </div>
+                {{/each}}
+            </div>
+            <div class="recommend"></div>
+            <div class="attention"></div>
+        </div>
+
     </main>
 
 
