--- a/views/monthly.html
+++ b/views/monthly.html
@@ -15,7 +15,7 @@
         `
         $(item.list).each(function(index, data) {
             str += `
-            <section class="list-detail">
+            <section class="list-detail toDetail" data-id="monthly/${data.name}">
             <div><img src="${data.img}" alt=""></div>
             <p>${data.name}</p>
             <p>${data.price}</p>
@@ -48,6 +48,11 @@
     <p>沪ICP备13016979<img src="/imges/首页-包月/police.png">沪公网安备 31011402005615号</p>
 </div>
 
+<script>
+    $('.toDetail').click(function() {
+        location.href = '/detailPage?id=' + $(this).data('id')
+    })
+</script>
 </body>
 
 </html>
